[package]
name = "docs-parser"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["tracing", "tracing-subscriber"]
wasm = ["console_error_panic_hook"]

[dependencies]
chrono = "=0.4.19"
console_error_panic_hook = { version = "0.1.7", optional = true }
regex = "=1.6.0"
serde = { version = "=1.0.140", features = ["derive"] }
tracing = { version = "=0.1.35", optional = true }
tracing-subscriber = { version = "=0.3.15", optional = true }
wasm-bindgen = { version = "=0.2.81", features = ["serde-serialize"] }
wee_alloc = { version = "=0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "=0.3.31"

[profile.release]
opt-level = "s"
lto = true
