[package]
name = "stork-builder"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.38"
futures = "=0.3.12"
structopt = "=0.3.21"
tracing = "=0.1.23"
tracing-subscriber = "=0.2.15"

[dependencies.docs-parser]
path = "../docs-parser"

[dependencies.stork-search]
version = "=1.0.4"
default-features = false

[dependencies.tokio]
version = "=1.8.4"
features = ["fs", "io-util", "macros", "rt-multi-thread"]
